--- a/views/newuser.ejs
+++ b/views/newuser.ejs
@@ -22,16 +22,16 @@
 
   <form class="container" method="POST" action="/users">
     <div class="col-md-6 mt-4">
-      <label for="email" class="form-label">Email</label>
-      <input type="email" class="form-control" id="email" name="email" required>
+      <label for="userEmail" class="form-label">Email</label>
+      <input type="email" class="form-control" id="userEmail" name="userEmail" required>
     </div>
     <div class="col-md-6 mt-3">
       <label for="password" class="form-label">Password</label>
       <input type="password" class="form-control" id="password" name="password" required>
     </div>
     <div class="col-md-6 mt-3">
-      <label for="name" class="form-label">Name</label>
-      <input type="text" class="form-control" id="name" name="name" required>
+      <label for="userName" class="form-label">Name</label>
+      <input type="text" class="form-control" id="userName" name="userName" required>
     </div>
     <div class="col-md-6 mt-3">
       <label for="contactNum" class="form-label">Contact Number</label>
