--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,30 +1,25 @@
 <!-- navbar.ejs -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Equipment Rental</a>
+    <a class="navbar-brand" href="/">Rent it!</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav ms-auto">
+        <% if (user && user.role === 'admin') { %>
+          <li class="nav-item">
+            <a class="nav-link" href="/users">User Management</a>
+          </li>
+        <% } %>
         <li class="nav-item">
-          <!-- Update the href to point to the home route -->
-          <a class="nav-link active" aria-current="page" href="/">Home</a>
-        </li>
-        <li class="nav-item">
-          <!-- Update the href to point to the equipments route -->
           <a class="nav-link" href="/equipments">Equipments</a>
         </li>
         <li class="nav-item">
-          <!-- Update the href to point to the users route -->
-          <a class="nav-link" href="/users">Users</a>
+          <a class="nav-link" href="/logout">Logout</a>
         </li>
       </ul>
-      <form class="d-flex ms-auto me-2" id="searchForm">
-        <input class="form-control me-2" id="searchInput" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
     </div>
   </div>
 </nav>
